# evtplugins

./: .gitignore  README.md  pyproject.toml
EvtPlugins/: Manifest.in  README.md  setup.py
EvtPlugins/EvtPlugins.egg-info/: PKG-INFO  SOURCES.txt
EvtPlugins/OpenSesame_Plugins/EVTxx/: EVTxx.md  EVTxx.py  info.yaml
EvtPlugins/OpenSesame_Plugins/RGB_Led_Control/: RGB_Led_Control.py  info.yaml
EvtPlugins/OpenSesame_Plugins/ResponseBox/: ResponseBox.md  ResponseBox.py  info.yaml
EvtPlugins/OpenSesame_Plugins/Shocker/: Shocker.py  info.yaml
EvtPlugins/OpenSesame_Plugins/TactileStimulator/: TactileStimulator.py  info.yaml
EvtPlugins/OpenSesame_Plugins/VAS/: VAS.py  experiment.osexp  info.yaml
EvtPlugins/OpenSesame_Plugins/VAS2/: VAS2.py  info.yaml
EvtPlugins/OpenSesame_Plugins/tactile_stimulator/: __init__.py
opensesame_plugins/: Manifest.in  README.md  setup.py
opensesame_plugins/EvtPlugins.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
opensesame_plugins/evt_plugin_collection/RGB_Led_Control/: info.yaml
opensesame_plugins/evt_plugin_collection/VAS2/: VAS2.py
opensesame_plugins/evt_plugin_collection/evt_xx/: __init__.py  evt_xx.py
opensesame_plugins/evt_plugin_collection/response_box/: __init__.py
opensesame_plugins/evt_plugin_collection/tactile_stimulator/: __init__.py  tactile_stimulator.py
opensesame_plugins/evt_plugins/: __init__.py
opensesame_plugins/evt_plugins/VAS/: VAS.py  __init__.py
opensesame_plugins/evt_plugins/evt/: __init__.py  evt.py
opensesame_plugins/evt_plugins/evt_trigger/: __init__.py  evt_trigger.md  evt_trigger.py
(+24 files in other folders)
