[tool.poetry]
name = "evt-plugins"
version = "0.1.0"
description = "RUG/BSS evt-plugins for OpenSesame"
authors = ["M. Stokroos <m.stokroos@rug.nl>"]
readme = "readme.md"
packages = [
    {include = "opensesame_plugins"},
]

[tool.poetry.dependencies]
python = ">= 3.7"
opensesame-core = ">= 4.0.0a0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
