[tool.poetry]
name = "evt-plugins"
version = "0.2.1"
description = "RUG/BSS EVT-plugins for OpenSesame 4"
authors = [
    "Martin Stokroos <m.stokroos@rug.nl>",
    "Mark M. Span <m.m.span@rug.nl>"
]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
    {include = "opensesame_plugins"},
]

[tool.poetry.dependencies]
python = "^3.8"
# opensesame-core = ">= 4.0.0a0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
